Corrected portfolio filtering logic

--- a/portfolio.html
+++ b/portfolio.html
@@ -298,6 +298,7 @@
 
     <!-- JavaScript -->
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/portfolio.js"></script>
     <script src="assets/js/image-resize.js"></script>
 </body>
 </html>
