Updated background color for sidebar

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -32,7 +32,13 @@
                         <a href="portfolio.html"><i class="fas fa-briefcase"></i> Portfolio</a>
                     </li>
                     <li>
+                        <a href="content.html"><i class="fas fa-file-alt"></i> Content</a>
+                    </li>
+                    <li>
                         <a href="settings.html"><i class="fas fa-cog"></i> Settings</a>
+                    </li>
+                    <li>
+                        <a href="analytics.html"><i class="fas fa-chart-bar"></i> Analytics</a>
                     </li>
                 </ul>
             </nav>
