--- a/admin/settings.html
+++ b/admin/settings.html
@@ -20,16 +20,22 @@
             </div>
             <nav class="sidebar-nav">
                 <ul>
-                    <li>
+                    <li class="active">
                         <a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
                     </li>
                     <li>
                         <a href="users.html"><i class="fas fa-users"></i> Users</a>
                     </li>
                     <li>
+                        <a href="posts.html"><i class="fas fa-file-alt"></i> Posts</a>
+                    </li>
+                    <li>
+                        <a href="portfolio.html"><i class="fas fa-briefcase"></i> Portfolio</a>
+                    </li>
+                    <li>
                         <a href="content.html"><i class="fas fa-file-alt"></i> Content</a>
                     </li>
-                    <li class="active">
+                    <li>
                         <a href="settings.html"><i class="fas fa-cog"></i> Settings</a>
                     </li>
                     <li>
