--- a/admin/analytics.html
+++ b/admin/analytics.html
@@ -21,11 +21,17 @@
             </div>
             <nav class="sidebar-nav">
                 <ul>
-                    <li>
+                    <li class="active">
                         <a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
                     </li>
                     <li>
                         <a href="users.html"><i class="fas fa-users"></i> Users</a>
+                    </li>
+                    <li>
+                        <a href="posts.html"><i class="fas fa-file-alt"></i> Posts</a>
+                    </li>
+                    <li>
+                        <a href="portfolio.html"><i class="fas fa-briefcase"></i> Portfolio</a>
                     </li>
                     <li>
                         <a href="content.html"><i class="fas fa-file-alt"></i> Content</a>
@@ -33,7 +39,7 @@
                     <li>
                         <a href="settings.html"><i class="fas fa-cog"></i> Settings</a>
                     </li>
-                    <li class="active">
+                    <li>
                         <a href="analytics.html"><i class="fas fa-chart-bar"></i> Analytics</a>
                     </li>
                 </ul>
